Fixed z-index of the toast component

--- a/src/app/toast/toast.component.css
+++ b/src/app/toast/toast.component.css
@@ -3,6 +3,7 @@
     top: 50px;
     right: 10px;
     width: 400px;
+    z-index: 1000;
 }
 
 .toast {
